# solana-nft-cashback

./: .gitignore  Anchor.toml  package.json  tsconfig.json
programs/nft-cashback/: Cargo.toml
programs/nft-cashback/src/: lib.rs  state.rs  utils.rs
programs/nft-cashback/src/instructions/: claim_cashback.rs  create_cashback.rs  initialize.rs  mod.rs  seize_cashback.rs
tests/: api.ts  candyMachine.ts  ctx.ts  index.ts  token.ts  utils.ts
